more link corrections

--- a/link_corrections.ipynb
+++ b/link_corrections.ipynb
@@ -13,49 +13,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Which kind of conventions are held in Rosemont, Illinois?\n",
+      "Name presidents of the schools which have queen noor of Jordan as one of them ?\n",
       "\n",
       "PREDICATE MAPPING:\n",
-      "URI: http://dbpedia.org/ontology/location\n",
-      "label: held in\n",
-      "sequence: 14,24\n",
-      "mapping: conventions\n",
+      "URI: http://dbpedia.org/ontology/president\n",
+      "label: presidents\n",
+      "sequence: 5,14\n",
+      "mapping: presidents\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/property/genre\n",
-      "label: kind of\n",
-      "sequence: 26,28\n",
-      "mapping: are\n",
+      "URI: http://dbpedia.org/property/president\n",
+      "label: presidents\n",
+      "sequence: 5,14\n",
+      "mapping: presidents\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/ontology/Convention\n",
-      "label: conventions\n",
-      "sequence: 14,24\n",
-      "mapping: conventions\n",
+      "URI: http://dbpedia.org/ontology/School\n",
+      "label: schools\n",
+      "sequence: 23,29\n",
+      "mapping: schools\n",
       "\n",
       "\n",
       "\n",
       "ENTITY MAPPING:\n",
-      "URI: http://dbpedia.org/resource/Rosemont,_Illinois\n",
-      "label: rosemont, illinois\n",
-      "sequence: 38,55\n",
-      "mapping: Rosemont, Illinois\n",
+      "URI: http://dbpedia.org/resource/Queen_Noor_of_Jordan\n",
+      "label: jordan queen noor\n",
+      "sequence: 42,58\n",
+      "mapping: queen noor of Jor\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "with open(\"./EARL/linked.json\") as json_data:\n",
+    "with open(\"./linked.json\") as json_data:\n",
     "    d = json.load(json_data)\n",
-    "    item = d[34]\n",
+    "    item = d[70]\n",
     "    q = item['question']\n",
     "    p_map = item['predicate mapping']\n",
     "    e_map = item['entity mapping']\n",
@@ -82,20 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6,12\n",
-      "mapping: kind of\n"
+      "42,61\n",
+      "mapping: queen noor of Jordan\n"
      ]
     }
    ],
    "source": [
-    "s = \"kind of\"\n",
+    "s = \"queen noor of Jordan\"\n",
     "st = q.find(s)\n",
     "en = st + len(s) - 1\n",
     "print('{0},{1}'.format(st, en))\n",
