--- a/link_corrections.ipynb
+++ b/link_corrections.ipynb
@@ -13,40 +13,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name presidents of the schools which have queen noor of Jordan as one of them ?\n",
+      "What is the television show whose vocals are performed by  April Stewart and Mona Marshall?\n",
       "\n",
       "PREDICATE MAPPING:\n",
-      "URI: http://dbpedia.org/ontology/president\n",
-      "label: presidents\n",
-      "sequence: 5,14\n",
-      "mapping: presidents\n",
+      "URI: http://dbpedia.org/property/voices\n",
+      "label: vocals\n",
+      "sequence: 34,39\n",
+      "mapping: vocals\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/property/president\n",
-      "label: presidents\n",
-      "sequence: 5,14\n",
-      "mapping: presidents\n",
+      "URI: http://dbpedia.org/property/voices\n",
+      "label: vocals\n",
+      "sequence: 34,39\n",
+      "mapping: vocals\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/ontology/School\n",
-      "label: schools\n",
-      "sequence: 23,29\n",
-      "mapping: schools\n",
+      "URI: http://dbpedia.org/ontology/TelevisionShow\n",
+      "label: television show\n",
+      "sequence: 12,26\n",
+      "mapping: television show\n",
       "\n",
       "\n",
       "\n",
       "ENTITY MAPPING:\n",
-      "URI: http://dbpedia.org/resource/Queen_Noor_of_Jordan\n",
-      "label: jordan queen noor\n",
-      "sequence: 42,58\n",
-      "mapping: queen noor of Jor\n",
+      "URI: http://dbpedia.org/resource/April_Stewart\n",
+      "label: stewart april\n",
+      "sequence: 59,71\n",
+      "mapping: April Stewart\n",
+      "\n",
+      "\n",
+      "URI: http://dbpedia.org/resource/Mona_Marshall\n",
+      "label: marshall mona\n",
+      "sequence: 77,89\n",
+      "mapping: Mona Marshall\n",
       "\n",
       "\n"
      ]
@@ -55,7 +61,7 @@
    "source": [
     "with open(\"./linked.json\") as json_data:\n",
     "    d = json.load(json_data)\n",
-    "    item = d[70]\n",
+    "    item = d[81]\n",
     "    q = item['question']\n",
     "    p_map = item['predicate mapping']\n",
     "    e_map = item['entity mapping']\n",
@@ -82,20 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42,61\n",
-      "mapping: queen noor of Jordan\n"
+      "18,44\n",
+      "mapping: Girl from the North Country\n"
      ]
     }
    ],
    "source": [
-    "s = \"queen noor of Jordan\"\n",
+    "s = \"Girl from the North Country\"\n",
     "st = q.find(s)\n",
     "en = st + len(s) - 1\n",
     "print('{0},{1}'.format(st, en))\n",
