--- a/link_corrections.ipynb
+++ b/link_corrections.ipynb
@@ -13,46 +13,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is the television show whose vocals are performed by  April Stewart and Mona Marshall?\n",
+      "Which company has a product named Visual Studio and One Drive as service ?\n",
       "\n",
       "PREDICATE MAPPING:\n",
-      "URI: http://dbpedia.org/property/voices\n",
-      "label: vocals\n",
-      "sequence: 34,39\n",
-      "mapping: vocals\n",
+      "URI: http://dbpedia.org/property/services\n",
+      "label: service\n",
+      "sequence: 65,71\n",
+      "mapping: service\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/property/voices\n",
-      "label: vocals\n",
-      "sequence: 34,39\n",
-      "mapping: vocals\n",
+      "URI: http://dbpedia.org/property/products\n",
+      "label: product\n",
+      "sequence: 20,26\n",
+      "mapping: product\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/ontology/TelevisionShow\n",
-      "label: television show\n",
-      "sequence: 12,26\n",
-      "mapping: television show\n",
+      "URI: http://dbpedia.org/ontology/Company\n",
+      "label: company\n",
+      "sequence: 6,12\n",
+      "mapping: company\n",
       "\n",
       "\n",
       "\n",
       "ENTITY MAPPING:\n",
-      "URI: http://dbpedia.org/resource/April_Stewart\n",
-      "label: stewart april\n",
-      "sequence: 59,71\n",
-      "mapping: April Stewart\n",
+      "URI: http://dbpedia.org/resource/OneDrive\n",
+      "label: drive one\n",
+      "sequence: 52,60\n",
+      "mapping: One Drive\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/resource/Mona_Marshall\n",
-      "label: marshall mona\n",
-      "sequence: 77,89\n",
-      "mapping: Mona Marshall\n",
+      "URI: http://dbpedia.org/resource/Microsoft_Visual_Studio\n",
+      "label: visual studio\n",
+      "sequence: 34,46\n",
+      "mapping: Visual Studio\n",
       "\n",
       "\n"
      ]
@@ -61,7 +61,7 @@
    "source": [
     "with open(\"./linked.json\") as json_data:\n",
     "    d = json.load(json_data)\n",
-    "    item = d[81]\n",
+    "    item = d[99]\n",
     "    q = item['question']\n",
     "    p_map = item['predicate mapping']\n",
     "    e_map = item['entity mapping']\n",
@@ -88,20 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18,44\n",
-      "mapping: Girl from the North Country\n"
+      "57,66\n",
+      "mapping: Send It On\n"
      ]
     }
    ],
    "source": [
-    "s = \"Girl from the North Country\"\n",
+    "s = \"Send It On\"\n",
     "st = q.find(s)\n",
     "en = st + len(s) - 1\n",
     "print('{0},{1}'.format(st, en))\n",
