--- a/link_corrections.ipynb
+++ b/link_corrections.ipynb
@@ -13,46 +13,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Which company has a product named Visual Studio and One Drive as service ?\n",
+      "Name the sea with Helsinki as one of the shore city and is also an outflow for Danish straits?\n",
       "\n",
       "PREDICATE MAPPING:\n",
-      "URI: http://dbpedia.org/property/services\n",
-      "label: service\n",
-      "sequence: 65,71\n",
-      "mapping: service\n",
+      "URI: http://dbpedia.org/property/cities\n",
+      "label: city\n",
+      "sequence: 47,50\n",
+      "mapping: city\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/property/products\n",
-      "label: product\n",
-      "sequence: 20,26\n",
-      "mapping: product\n",
+      "URI: http://dbpedia.org/property/outflow\n",
+      "label: outflow\n",
+      "sequence: 67,73\n",
+      "mapping: outflow\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/ontology/Company\n",
-      "label: company\n",
-      "sequence: 6,12\n",
-      "mapping: company\n",
+      "URI: http://dbpedia.org/ontology/Sea\n",
+      "label: sea\n",
+      "sequence: 9,11\n",
+      "mapping: sea\n",
       "\n",
       "\n",
       "\n",
       "ENTITY MAPPING:\n",
-      "URI: http://dbpedia.org/resource/OneDrive\n",
-      "label: drive one\n",
-      "sequence: 52,60\n",
-      "mapping: One Drive\n",
+      "URI: http://dbpedia.org/resource/Helsinki\n",
+      "label: helsinki\n",
+      "sequence: 18,25\n",
+      "mapping: Helsinki\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/resource/Microsoft_Visual_Studio\n",
-      "label: visual studio\n",
-      "sequence: 34,46\n",
-      "mapping: Visual Studio\n",
+      "URI: http://dbpedia.org/resource/Danish_straits\n",
+      "label: straits danish\n",
+      "sequence: 79,92\n",
+      "mapping: Danish straits\n",
       "\n",
       "\n"
      ]
@@ -61,7 +61,7 @@
    "source": [
     "with open(\"./linked.json\") as json_data:\n",
     "    d = json.load(json_data)\n",
-    "    item = d[99]\n",
+    "    item = d[118]\n",
     "    q = item['question']\n",
     "    p_map = item['predicate mapping']\n",
     "    e_map = item['entity mapping']\n",
@@ -88,20 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57,66\n",
-      "mapping: Send It On\n"
+      "31,68\n",
+      "mapping: english under twenty one football team\n"
      ]
     }
    ],
    "source": [
-    "s = \"Send It On\"\n",
+    "s = \"english under twenty one football team\"\n",
     "st = q.find(s)\n",
     "en = st + len(s) - 1\n",
     "print('{0},{1}'.format(st, en))\n",
