--- a/link_corrections.ipynb
+++ b/link_corrections.ipynb
@@ -13,46 +13,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name the sea with Helsinki as one of the shore city and is also an outflow for Danish straits?\n",
+      "Name some shows whose company is owned by the CBS Corporation?\n",
       "\n",
       "PREDICATE MAPPING:\n",
-      "URI: http://dbpedia.org/property/cities\n",
-      "label: city\n",
-      "sequence: 47,50\n",
-      "mapping: city\n",
+      "URI: http://dbpedia.org/ontology/owner\n",
+      "label: owned\n",
+      "sequence: 33,37\n",
+      "mapping: owned\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/property/outflow\n",
-      "label: outflow\n",
-      "sequence: 67,73\n",
-      "mapping: outflow\n",
+      "URI: http://dbpedia.org/property/company\n",
+      "label: company\n",
+      "sequence: 22,28\n",
+      "mapping: company\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/ontology/Sea\n",
-      "label: sea\n",
-      "sequence: 9,11\n",
-      "mapping: sea\n",
+      "URI: http://dbpedia.org/ontology/TelevisionShow\n",
+      "label: shows\n",
+      "sequence: 10,14\n",
+      "mapping: shows\n",
       "\n",
       "\n",
       "\n",
       "ENTITY MAPPING:\n",
-      "URI: http://dbpedia.org/resource/Helsinki\n",
-      "label: helsinki\n",
-      "sequence: 18,25\n",
-      "mapping: Helsinki\n",
-      "\n",
-      "\n",
-      "URI: http://dbpedia.org/resource/Danish_straits\n",
-      "label: straits danish\n",
-      "sequence: 79,92\n",
-      "mapping: Danish straits\n",
+      "URI: http://dbpedia.org/resource/CBS_Corporation\n",
+      "label: corporation\n",
+      "sequence: 50,60\n",
+      "mapping: Corporation\n",
       "\n",
       "\n"
      ]
@@ -61,7 +55,7 @@
    "source": [
     "with open(\"./linked.json\") as json_data:\n",
     "    d = json.load(json_data)\n",
-    "    item = d[118]\n",
+    "    item = d[150]\n",
     "    q = item['question']\n",
     "    p_map = item['predicate mapping']\n",
     "    e_map = item['entity mapping']\n",
@@ -88,20 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31,68\n",
-      "mapping: english under twenty one football team\n"
+      "46,60\n",
+      "mapping: CBS Corporation\n"
      ]
     }
    ],
    "source": [
-    "s = \"english under twenty one football team\"\n",
+    "s = \"CBS Corporation\"\n",
     "st = q.find(s)\n",
     "en = st + len(s) - 1\n",
     "print('{0},{1}'.format(st, en))\n",
