--- a/link_corrections.ipynb
+++ b/link_corrections.ipynb
@@ -13,40 +13,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name some shows whose company is owned by the CBS Corporation?\n",
+      "What was the language of the single which came before To Know Him Is to Love Him?\n",
       "\n",
       "PREDICATE MAPPING:\n",
-      "URI: http://dbpedia.org/ontology/owner\n",
-      "label: owned\n",
-      "sequence: 33,37\n",
-      "mapping: owned\n",
+      "URI: http://dbpedia.org/ontology/previousWork\n",
+      "label: before\n",
+      "sequence: 47,52\n",
+      "mapping: before\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/property/company\n",
-      "label: company\n",
-      "sequence: 22,28\n",
-      "mapping: company\n",
-      "\n",
-      "\n",
-      "URI: http://dbpedia.org/ontology/TelevisionShow\n",
-      "label: shows\n",
-      "sequence: 10,14\n",
-      "mapping: shows\n",
+      "URI: http://dbpedia.org/property/language\n",
+      "label: language\n",
+      "sequence: 13,20\n",
+      "mapping: language\n",
       "\n",
       "\n",
       "\n",
       "ENTITY MAPPING:\n",
-      "URI: http://dbpedia.org/resource/CBS_Corporation\n",
-      "label: corporation\n",
-      "sequence: 50,60\n",
-      "mapping: Corporation\n",
+      "URI: http://dbpedia.org/resource/To_Know_Him_Is_to_Love_Him\n",
+      "label: love know\n",
+      "sequence: 57,65\n",
+      "mapping: Know Him \n",
       "\n",
       "\n"
      ]
@@ -55,7 +49,7 @@
    "source": [
     "with open(\"./linked.json\") as json_data:\n",
     "    d = json.load(json_data)\n",
-    "    item = d[150]\n",
+    "    item = d[160]\n",
     "    q = item['question']\n",
     "    p_map = item['predicate mapping']\n",
     "    e_map = item['entity mapping']\n",
@@ -82,20 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46,60\n",
-      "mapping: CBS Corporation\n"
+      "54,79\n",
+      "mapping: To Know Him Is to Love Him\n"
      ]
     }
    ],
    "source": [
-    "s = \"CBS Corporation\"\n",
+    "s = \"To Know Him Is to Love Him\"\n",
     "st = q.find(s)\n",
     "en = st + len(s) - 1\n",
     "print('{0},{1}'.format(st, en))\n",
