--- a/link_corrections.ipynb
+++ b/link_corrections.ipynb
@@ -13,34 +13,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What was the language of the single which came before To Know Him Is to Love Him?\n",
+      "Count the number of people who graduated from universities affiliated with the NCAA.\n",
       "\n",
       "PREDICATE MAPPING:\n",
-      "URI: http://dbpedia.org/ontology/previousWork\n",
-      "label: before\n",
-      "sequence: 47,52\n",
-      "mapping: before\n",
+      "URI: http://dbpedia.org/ontology/athletics\n",
+      "label: the\n",
+      "sequence: 6,8\n",
+      "mapping: the\n",
       "\n",
       "\n",
-      "URI: http://dbpedia.org/property/language\n",
-      "label: language\n",
-      "sequence: 13,20\n",
-      "mapping: language\n",
+      "URI: http://dbpedia.org/property/education\n",
+      "label: graduated\n",
+      "sequence: 31,39\n",
+      "mapping: graduated\n",
+      "\n",
+      "\n",
+      "URI: http://dbpedia.org/ontology/Person\n",
+      "label: people\n",
+      "sequence: 20,25\n",
+      "mapping: people\n",
       "\n",
       "\n",
       "\n",
       "ENTITY MAPPING:\n",
-      "URI: http://dbpedia.org/resource/To_Know_Him_Is_to_Love_Him\n",
-      "label: love know\n",
-      "sequence: 57,65\n",
-      "mapping: Know Him \n",
+      "URI: http://dbpedia.org/resource/National_Collegiate_Athletic_Association\n",
+      "label: \n",
+      "sequence: 1000,999\n",
+      "mapping: \n",
       "\n",
       "\n"
      ]
@@ -49,7 +55,7 @@
    "source": [
     "with open(\"./linked.json\") as json_data:\n",
     "    d = json.load(json_data)\n",
-    "    item = d[160]\n",
+    "    item = d[170]\n",
     "    q = item['question']\n",
     "    p_map = item['predicate mapping']\n",
     "    e_map = item['entity mapping']\n",
@@ -76,20 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54,79\n",
-      "mapping: To Know Him Is to Love Him\n"
+      "79,82\n",
+      "mapping: NCAA\n"
      ]
     }
    ],
    "source": [
-    "s = \"To Know Him Is to Love Him\"\n",
+    "s = \"NCAA\"\n",
     "st = q.find(s)\n",
     "en = st + len(s) - 1\n",
     "print('{0},{1}'.format(st, en))\n",
