--- a/link_corrections.ipynb
+++ b/link_corrections.ipynb
@@ -13,40 +13,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Count the number of people who graduated from universities affiliated with the NCAA.\n",
+      "Name the sports played by PATTS College of Aeronautics?\n",
       "\n",
       "PREDICATE MAPPING:\n",
-      "URI: http://dbpedia.org/ontology/athletics\n",
-      "label: the\n",
-      "sequence: 6,8\n",
-      "mapping: the\n",
-      "\n",
-      "\n",
-      "URI: http://dbpedia.org/property/education\n",
-      "label: graduated\n",
-      "sequence: 31,39\n",
-      "mapping: graduated\n",
-      "\n",
-      "\n",
-      "URI: http://dbpedia.org/ontology/Person\n",
-      "label: people\n",
-      "sequence: 20,25\n",
-      "mapping: people\n",
+      "URI: http://dbpedia.org/property/athletics\n",
+      "label: aeronautics\n",
+      "sequence: 43,53\n",
+      "mapping: Aeronautics\n",
       "\n",
       "\n",
       "\n",
       "ENTITY MAPPING:\n",
-      "URI: http://dbpedia.org/resource/National_Collegiate_Athletic_Association\n",
-      "label: \n",
-      "sequence: 1000,999\n",
-      "mapping: \n",
+      "URI: http://dbpedia.org/resource/PATTS_College_of_Aeronautics\n",
+      "label: aeronautics college patts\n",
+      "sequence: 26,50\n",
+      "mapping: PATTS College of Aeronaut\n",
       "\n",
       "\n"
      ]
@@ -55,7 +43,7 @@
    "source": [
     "with open(\"./linked.json\") as json_data:\n",
     "    d = json.load(json_data)\n",
-    "    item = d[170]\n",
+    "    item = d[173]\n",
     "    q = item['question']\n",
     "    p_map = item['predicate mapping']\n",
     "    e_map = item['entity mapping']\n",
@@ -82,20 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79,82\n",
-      "mapping: NCAA\n"
+      "26,53\n",
+      "mapping: PATTS College of Aeronautics\n"
      ]
     }
    ],
    "source": [
-    "s = \"NCAA\"\n",
+    "s = \"PATTS College of Aeronautics\"\n",
     "st = q.find(s)\n",
     "en = st + len(s) - 1\n",
     "print('{0},{1}'.format(st, en))\n",
